[gd_scene load_steps=7 format=3 uid="uid://dh8eou5xkwgcw"]

[ext_resource type="Texture2D" uid="uid://cjt1fes7q27t4" path="res://NewSprites/GUI.png" id="1_lwhdp"]
[ext_resource type="Texture2D" uid="uid://wug53li7gjyh" path="res://NewSprites/equipment.png" id="2_5wn1d"]
[ext_resource type="Script" path="res://Scripts/objetoTemplate.gd" id="2_s6mpi"]
[ext_resource type="Texture2D" uid="uid://cmxyabydxfvaq" path="res://NewSprites/materials.png" id="4_ctyb5"]
[ext_resource type="FontFile" uid="uid://bv8fe2b6ni5fa" path="res://Fonts/m3x6.ttf" id="5_rkani"]

[sub_resource type="AtlasTexture" id="AtlasTexture_25prr"]
atlas = ExtResource("1_lwhdp")
region = Rect2(464, 224, 112, 32)

[node name="objetoTemplate" type="TextureButton" node_paths=PackedStringArray("imageObject", "imageEquipment", "cantidad", "nombre")]
anchors_preset = -1
anchor_top = 0.046
anchor_right = 0.224
anchor_bottom = 0.046
offset_top = -16.1
offset_bottom = 15.9
mouse_default_cursor_shape = 2
texture_normal = SubResource("AtlasTexture_25prr")
stretch_mode = 3
script = ExtResource("2_s6mpi")
imageObject = NodePath("node2dContainer/imageObject")
imageEquipment = NodePath("node2dContainer/imageEquipment")
cantidad = NodePath("cantidad_label")
nombre = NodePath("nombre_label")

[node name="node2dContainer" type="Control" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -51.0
offset_top = -12.0
offset_right = -26.0
offset_bottom = 13.0
grow_horizontal = 2
grow_vertical = 2

[node name="imageObject" type="Sprite2D" parent="node2dContainer"]
visible = false
position = Vector2(12, 12)
texture = ExtResource("4_ctyb5")
hframes = 5
vframes = 2

[node name="imageEquipment" type="Sprite2D" parent="node2dContainer"]
visible = false
position = Vector2(12, 12)
scale = Vector2(0.958333, 0.958333)
texture = ExtResource("2_5wn1d")
hframes = 4
vframes = 3
frame = 8

[node name="cantidad_label" type="Label" parent="."]
layout_mode = 0
offset_left = 31.0
offset_top = -2.0
offset_right = 76.0
offset_bottom = 14.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("5_rkani")
text = "Cant: 99"
horizontal_alignment = 1

[node name="nombre_label" type="Label" parent="."]
layout_mode = 0
offset_left = 34.0
offset_top = 11.0
offset_right = 100.0
offset_bottom = 27.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("5_rkani")
text = "NOMBRE DEL"

[connection signal="pressed" from="." to="." method="_on_pressed"]
